# frame-averaging-pytorch

./: README.md  pyproject.toml
frame_averaging_pytorch/: __init__.py  frame_averaging.py
tests/: test_frame_average.py
